src/test/ui/consts/constifconst-call-in-const-position.stderr
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/constifconst-call-in-const-position.rs:3:30
   |
LL | #![feature(const_trait_impl, generic_const_exprs)]
   |                              ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0080]: evaluation of `foo::<()>::{constant#0}` failed
  --> $DIR/constifconst-call-in-const-position.rs:15:38
   |
LL | const fn foo<T: ~const Tr>() -> [u8; T::a()] {
   |                                      ^^^^^^ calling non-const function `<() as Tr>::a`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
